bundle/manifests/lifecycle-agent-controller-manager-metrics-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: lca-metrics-serving-cert
  creationTimestamp: null
  labels:
    app.kubernetes.io/component: lifecycle-agent
    app.kubernetes.io/name: lifecycle-agent-operator
    control-plane: controller-manager
  name: lifecycle-agent-controller-manager-metrics-service
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: lifecycle-agent
    app.kubernetes.io/name: lifecycle-agent-operator
    control-plane: controller-manager
status:
  loadBalancer: {}
