bundle/manifests/lifecycle-agent-controller-manager_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lifecycle-agent-controller-manager
spec:
  egress:
  - {}
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
  - Egress
