bundle/manifests/lifecycle-agent-default-deny_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lifecycle-agent-default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
